<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.ConsultaActivity">

    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/btnVoltar" />

    <Button
        android:id="@+id/btnCapturar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:text="@string/btnCapturar" />

    <TextView
        android:id="@+id/txtCodigoLido"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:textSize="10pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtCodigoLido" />

    <EditText
        android:id="@+id/edtBloco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        tools:ignore="LabelFor"
        android:enabled="false"
        android:textSize="10pt"
        android:autofillHints="" />

    <TextView
        android:id="@+id/txtCodigoBloco"
        android:layout_gravity="center_horizontal"
        android:textSize="10pt"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtCodigoBloco" />

    <TextView
        android:id="@+id/txtBloco"
        android:layout_gravity="center_horizontal"
        android:textSize="10pt"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtBloco" />

</androidx.appcompat.widget.LinearLayoutCompat>