<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".view.ConfiguracaoActivity">

    <TextView
        android:id="@+id/txtWebService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/txtWebService"
        android:textSize="30sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/edtConfIp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/edtConfIp"
        android:inputType="textUri"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edtConfPorta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/edtConfPorta"
        android:inputType="number"
        android:layout_alignParentTop="true"
        android:importantForAutofill="no" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:context=".view.ConfiguracaoActivity">

        <Button
            android:id="@+id/btnCofSalvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:onClick="Save"
            android:text="@string/btnConfSalvar"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/btnConfVisualizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:onClick="Get"
            android:text="@string/btnConfVisualizar"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/btnConfLimpar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:onClick="clear"
            android:text="@string/btnConfLimpar"
            tools:ignore="OnClick" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>